--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ android {
     compileSdk 32
 
     defaultConfig {
-        applicationId "app.webcrollingexample"
+        applicationId "app.crawling_news"
         minSdk 21
         targetSdk 32
         versionCode 1
@@ -40,4 +40,5 @@ dependencies {
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
 
     implementation 'com.google.android.gms:play-services-auth:20.3.0'
+
 }
