--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="app.webcrollingexample">
+    package="app.crawling_news">
 
     <uses-permission android:name="android.permission.INTERNET" />
 
@@ -9,14 +9,14 @@
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/app_icon"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/app_icon"
         android:supportsRtl="true"
-        android:theme="@style/Theme.WebCrollingExample"
+        android:theme="@style/Theme.WebCrawlingExample"
         tools:targetApi="31">
         <activity
-            android:name=".LoginActivity"
+            android:name="app.crawling_news.LoginActivity"
             android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -25,10 +25,10 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".WebViewActivity"
+            android:name="app.crawling_news.WebViewActivity"
             android:exported="false" />
         <activity
-            android:name=".MainActivity"
+            android:name="app.crawling_news.MainActivity"
             android:exported="false"/>
     </application>
 
