--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,22 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="app.crawling_news">
+    package="app.crawling_news" >
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission
+        android:name="android.permission.BIND_REMOTEVIEWS"
+        tools:ignore="ProtectedPermissions" />
 
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@mipmap/app_icon"
+        android:icon="@drawable/app_icon"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/app_icon"
+        android:roundIcon="@drawable/app_icon"
         android:supportsRtl="true"
         android:theme="@style/Theme.WebCrawlingExample"
-        tools:targetApi="31">
+        tools:targetApi="31" >
         <activity
-            android:name="app.crawling_news.LoginActivity"
+            android:name=".live.LiveNewsFragment"
+            android:exported="false" />
+        <activity
+            android:name=".bookmark.BookMarkFragment"
+            android:exported="false" />
+        <activity
+            android:name=".LoginActivity"
             android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -25,11 +34,11 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="app.crawling_news.WebViewActivity"
+            android:name=".WebViewInner"
             android:exported="false" />
         <activity
-            android:name="app.crawling_news.MainActivity"
-            android:exported="false"/>
+            android:name=".MainActivity"
+            android:exported="false" />
     </application>
 
 </manifest>
