--- a/settings.gradle
+++ b/settings.gradle
@@ -12,5 +12,5 @@ dependencyResolutionManagement {
         mavenCentral()
     }
 }
-rootProject.name = "WebCrawlingExample"
+rootProject.name = "WebCrawlingNews"
 include ':app'
