2022-10-31 1. Room DB 추가하여 보관함 Insert,Find,Delete 구현 2. popup메뉴 실시간 기사로 들어갈 경우에만 보관함 추가 보임 3. 일부 UI 개선

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,4 +44,11 @@ dependencies {
 
     implementation 'com.google.android.gms:play-services-auth:20.3.0'
 
+    implementation 'androidx.viewpager2:viewpager2:1.0.0'
+
+    def room_version = "2.4.3"
+
+    implementation "androidx.room:room-runtime:$room_version"
+    annotationProcessor "androidx.room:room-compiler:$room_version"
+
 }
