--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,13 +19,15 @@
         android:theme="@style/Theme.WebCrawlingExample"
         tools:targetApi="31" >
         <activity
-            android:name=".live.LiveNewsFragment"
-            android:exported="false" />
-        <activity
-            android:name=".bookmark.BookMarkFragment"
-            android:exported="false" />
-        <activity
             android:name=".LoginActivity"
+            android:exported="true" >
+
+        </activity>
+        <activity
+            android:name=".WebViewInner"
+            android:exported="false" />
+        <activity
+            android:name=".MainActivity"
             android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -33,12 +35,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".WebViewInner"
-            android:exported="false" />
-        <activity
-            android:name=".MainActivity"
-            android:exported="false" />
     </application>
 
 </manifest>
